CMBSandbox4/src/objects/ApexLog__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>Created_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>last_7_days</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>last 7 days</label>
    </listViews>
    <nameField>
        <displayFormat>Log[{0}</displayFormat>
        <label>Apex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>